[gd_scene load_steps=6 format=3 uid="uid://by2j5u4vqu4j1"]

[ext_resource type="Script" path="res://scripts/cards/card_ui.gd" id="1_lg0xc"]
[ext_resource type="Texture2D" path="res://assets/cards/card_front.png" id="2_j85me"]
[ext_resource type="Texture2D" path="res://assets/cards/card_back.png" id="3_oj6pw"]
[ext_resource type="Texture2D" path="res://assets/cards/card_highlight.png" id="4_dxk6b"]
[ext_resource type="Texture2D" path="res://assets/cards/card_glow.png" id="5_y24w8"]

[node name="CardUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -120.0
offset_right = 80.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lg0xc")

[node name="Backface" type="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_oj6pw")
expand_mode = 1

[node name="Frontface" type="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j85me")
expand_mode = 1

[node name="Highlight" type="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_dxk6b")
expand_mode = 1

[node name="GlowEffect" type="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_y24w8")
expand_mode = 1

[node name="CardInfo" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameLabel" type="Label"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 15.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.392157)
theme_override_font_sizes/font_size = 18
text = "卡牌名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueLabel" type="Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "卡牌描述文本"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3